# semantic-kernel

./: README.md  pyproject.toml  ruff.toml
app/: config.py  main.py
app/agents/: summary_agent.py
app/kernel/: kernel.py
app/models/: models.py
app/routes/: agents.py  generic_constants.py  routes.py  version_routes.py
app/utils/: agents_common.py
config/: settings.py
