[tool.poetry]
name = "app"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
aiobreaker = "^1.2.0"
aiokafka = "^0.12.0"
azure-core = "^1.34.0"
azure-storage-blob = "^12.25.1"
confluent-kafka = "^2.10.1"
fastapi = "^0.115.0"
fhirpy = "^2.0.15"
jinja2 = "^3.1.6"
openai = "^1.84.0"
pydantic = ">=2.0"
pydantic-settings = "^2.9.1"
pymongo = "^4.13.2"
requests = "^2.32.4"
semantic-kernel = "^1.32.1"
tenacity = "^9.1.2"
uvicorn = "^0.31.0"
fhir-resources = "^8.0.0"
faker = "^37.4.0"
azure-ai-documentintelligence = "^1.0.2"
arize-phoenix = "^11.17.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
mongomock = "^4.3.0"
pre-commit = "^3.7.0"
pytest = "^8.2.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.12.1"
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
pythonpath = [
  "app"
]

[tool.coverage.run]
source = ['app']
relative_files = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "jfrog"
url = "https://mck.jfrog.io/artifactory/api/pypi/mt-genai-pypi/simple"
priority = "supplemental"